force-app/main/default/objects/Market_Segmentation__c/Market_Segmentation__c.object-meta.xml
<CustomObject>
    <label>Market Segmentation</label>
    <nameField>
        <displayFormat>MS-{00000}</displayFormat>
        <label>Market Segmentation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market Segmentation</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>