force-app/main/default/objects/Market_Segmentation__c/fields/Adjusted_Market_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Market_Procedures__c</fullName>
    <label>Adjusted Market Procedures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>