force-app/main/default/objects/Market_Segmentation__c/fields/Aligned_Team__c.field-meta.xml
<CustomField>
    <fullName>Aligned_Team__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Aligned Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>