force-app/main/default/objects/Market_Segmentation__c/fields/IMS_Revenue__c.field-meta.xml
<CustomField>
    <fullName>IMS_Revenue__c</fullName>
    <label>IMS Covid Adj. Sales 2019</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>