force-app/main/default/objects/Market_Segmentation__c/fields/Market_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Market_Procedures__c</fullName>
    <label>IMS Covid Adj. Procedures 2019</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>