force-app/main/default/objects/Market_Segmentation__c/fields/Master_Territory__c.field-meta.xml
<CustomField>
    <fullName>Master_Territory__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Master Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>