force-app/main/default/objects/Market_Segmentation__c/fields/Master_Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>Master_Territory_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Territory ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Market Segmentation (Master Territory ID)</relationshipLabel>
    <relationshipName>Market_Segmentation</relationshipName>
    <type>Lookup</type>
</CustomField>