force-app/main/default/objects/Market_Segmentation__c/fields/Primary_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitor__c</fullName>
    <label>Primary Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAP</fullName>
            </value>
            <value>
                <fullName>Aecuaos</fullName>
            </value>
            <value>
                <fullName>Aesculap</fullName>
            </value>
            <value>
                <fullName>Ai-medic</fullName>
            </value>
            <value>
                <fullName>Alpha Consulting Group</fullName>
            </value>
            <value>
                <fullName>AMPLITUDE SAS</fullName>
            </value>
            <value>
                <fullName>AQ Implants</fullName>
            </value>
            <value>
                <fullName>Arthrex</fullName>
            </value>
            <value>
                <fullName>Ascension</fullName>
            </value>
            <value>
                <fullName>Axomed</fullName>
            </value>
            <value>
                <fullName>B.Braun</fullName>
            </value>
            <value>
                <fullName>Brehm</fullName>
            </value>
            <value>
                <fullName>Conformis</fullName>
            </value>
            <value>
                <fullName>Corentec</fullName>
            </value>
            <value>
                <fullName>Corin</fullName>
            </value>
            <value>
                <fullName>DePuy</fullName>
            </value>
            <value>
                <fullName>DeSoutter</fullName>
            </value>
            <value>
                <fullName>DIZG</fullName>
            </value>
            <value>
                <fullName>DJO</fullName>
            </value>
            <value>
                <fullName>DJO Surgical</fullName>
            </value>
            <value>
                <fullName>Encore</fullName>
            </value>
            <value>
                <fullName>Exactech</fullName>
            </value>
            <value>
                <fullName>GE Healthcare Performance Solutions</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Group Lepin</fullName>
            </value>
            <value>
                <fullName>Heraeus</fullName>
            </value>
            <value>
                <fullName>Hunter &amp; Associates</fullName>
            </value>
            <value>
                <fullName>Implantcast</fullName>
            </value>
            <value>
                <fullName>Implan-Tec</fullName>
            </value>
            <value>
                <fullName>Implantindustries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>