force-app/main/default/objects/Market_Segmentation__c/fields/Procedure_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Opportunity__c</fullName>
    <label>Procedure Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>