force-app/main/default/objects/Market_Segmentation__c/fields/Surgeon_Name__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surgeon Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Physician</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Market Segmentation</relationshipLabel>
    <relationshipName>Market_Segmentations</relationshipName>
    <type>Lookup</type>
</CustomField>