force-app/main/default/objects/Market_Segmentation__c/fields/Zimmer_Biomet_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Zimmer_Biomet_Procedures__c</fullName>
    <label>ZB PROCEDURES 2020</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>