force-app/main/default/objects/Market_Segmentation__c/fields/Zimmer_Biomet_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Zimmer_Biomet_Revenue__c</fullName>
    <label>ZB Sales 2020</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>