force-app/main/default/objects/Market_Segmentation__c/listViews/Extremities.listView-meta.xml
<ListView>
    <fullName>Extremities</fullName>
    <columns>NAME</columns>
    <columns>Surgeon_Name__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Segementation__c</columns>
    <columns>Market_Procedures__c</columns>
    <columns>Zimmer_Biomet_Procedures__c</columns>
    <columns>Procedure_Opportunity__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Product_Group__c</field>
        <operation>equals</operation>
        <value>Extremities</value>
    </filters>
    <label>Extremities</label>
</ListView>