force-app/main/default/objects/Market_Segmentation__c/listViews/Trauma.listView-meta.xml
<ListView>
    <fullName>Trauma</fullName>
    <columns>NAME</columns>
    <columns>Surgeon_Name__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Segementation__c</columns>
    <columns>Market_Procedures__c</columns>
    <columns>Zimmer_Biomet_Procedures__c</columns>
    <columns>Procedure_Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Group__c</field>
        <operation>equals</operation>
        <value>Trauma</value>
    </filters>
    <label>Trauma</label>
    <language>en_US</language>
</ListView>